--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,48 @@
 body{
-  background-color: green;
-  color: black;
+  background-image: url(https://oir.mobi/uploads/posts/2021-03/1616979882_41-p-stalnoi-fon-42.jpg);
+}
+li{
+  display: inline-block;
+  padding: 10px 100px;
+}
+a{
+  background-color: #029400;
+  border: 1px solid #194718;
+  border-radius:  10px;
+  font-size: 30px;
+  padding: 5px 5px;
+  text-decoration: none;
+  color: black
+}
+a:hover{
+  background-color: #0DEB09;
+  border: 1px solid #194718;
+  border-radius:  10px;
+  font-size: 31px;
+  padding: 5px 5px;
+  text-decoration: none;
+  color: black
+}
+.posts{
+  background-color: #266B24;
+  border: 1px solid #000000;
+  border-radius:  60px;
+  font-size: 30px;
+  padding: 10px 10px;
+  text-decoration: none;
+  color: black
+  line="center"
+}
+.button{
+  background-color: #0DEB09;
+  border: 1px solid #194718;
+  border-radius:  20px;
+  font-size: 30px;
+  padding: 10px 800px;
+  text-decoration: none;
+  color: black
 }
 h1{
-  font-size: 40px;
-}
-p{
-  background-color: yellow;
+  font-size: 25px;
+  
 }
